--- a/module00/ex02/CMakeLists.txt
+++ b/module00/ex02/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.16)
 project(ex02)
 
 set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_CPP_FLAGS -Wall -Werror -Wextra)
 
 add_executable(ex02 tests.cpp Account.cpp Account.hpp)
