--- a/module01/ex00/Makefile
+++ b/module01/ex00/Makefile
@@ -1,5 +1,5 @@
 CC	=				c++
-CFLAGS =			-Wall -Werror -Wextra -std=c++98 -g -fsanitize=address
+CFLAGS =			-Wall -Werror -Wextra -std=c++98
 RM =				rm -rf
 
 NAME =				BraiiiiiiinnnzzzZ
