--- a/module03/ex00/CMakeLists.txt
+++ b/module03/ex00/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ex00)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(ex00 main.cpp Fixed.cpp Fixed.h)
+add_executable(ex00 main.cpp ClapTrap.cpp ClapTrap.h)
