--- a/module03/ex01/CMakeLists.txt
+++ b/module03/ex01/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.21)
 project(ex01)
 
 set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
 
 add_executable(ex01 main.cpp ClapTrap.cpp ClapTrap.h ScavTrap.cpp ScavTrap.h)
