--- a/module03/ex03/CMakeLists.txt
+++ b/module03/ex03/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.21)
 project(ex03)
 
 set(CMAKE_CXX_STANDARD 98)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wshadow")
 
 add_executable(ex03 main.cpp ClapTrap.cpp ClapTrap.h ScavTrap.cpp ScavTrap.h FragTrap.cpp FragTrap.h DiamondTrap.cpp DiamondTrap.h)
