--- a/module04/ex00/CMakeLists.txt
+++ b/module04/ex00/CMakeLists.txt
@@ -5,4 +5,4 @@ project(${ProjectDir})
 set(CMAKE_CXX_STANDARD 98)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
 
-add_executable(${ProjectDir} main.cpp main.cpp Animal.cpp Animal.h Dog.cpp Dog.h Cat.cpp Cat.h Dog.cpp Dog.h Cat.cpp Cat.h)
+add_executable(${ProjectDir} main.cpp main.cpp Animal.cpp Animal.h Dog.cpp Dog.h Cat.cpp Cat.h Dog.cpp Dog.h Cat.cpp Cat.h WrongAnimal.cpp WrongAnimal.h WrongCat.cpp WrongCat.h)
